# sievio

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LLMS.md  MIGRATION.md  README.md  SECURITY.md  agents.md  core_upload.md  example_config.toml  llms.md  manual_test_github.toml  mkdocs.yml  project_files.md  pyproject.toml  sample.jsonl
accel/: AGENTS.md  LLMS.md  README.md
accel/src/: lib.rs
docs/: CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  QUALITY_CONTROL.md  README.md  TECHNICAL_MANUAL.md  index.md
docs/cookbook/: README.md  custom_pii_scrubbing.md  dedup_post_qc.md  pdf_ingestion.md
repocapsule/: __init__.py  chunk.py  config.py  convert.py  decode.py  evtxio.py  export.py  factories.py  fs.py  githubio.py  interfaces.py  licenses.py  log.py  md_kql.py  naming.py  pdfio.py  pipeline.py  qc.py  qc_utils.py  records.py  runner.py  safe_http.py  sinks.py  sources_webpdf.py
repocapsule/src/repocapsule/: decode.py
scripts/: generate_configuration_md.py  manual_test_github.py  manual_test_github_toml.py  manual_test_web_pdf.py  seed_dedup_db.py  test_sysmon_modular.py
src/repocapsule/: __init__.py  chunk.py  config.py  convert.py  decode.py  evtxio.py  factories.py  fs.py  githubio.py  interfaces.py  jsonl_source.py  licenses.py  log.py  md_kql.py  naming.py  pdfio.py  pipeline.py  qc.py  qc_controller.py  qc_utils.py  records.py  runner.py  safe_http.py  sinks.py  sources_webpdf.py
src/repocapsule/cli/: __init__.py  licenses.py  main.py  runner.py
src/repocapsule/core/: __init__.py  builder.py  chunk.py  concurrency.py  config.py  convert.py  dataset_card.py  decode.py  dedup_store.py  factories.py  factories_context.py  factories_qc.py  factories_sinks.py  factories_sources.py  interfaces.py  language_id.py  licenses.py  log.py  naming.py  pipeline.py  plugins.py  qc_controller.py  qc_post.py  qc_utils.py  records.py  registries.py  safe_http.py
src/repocapsule/core/extras/: __init__.py  langid_lingua.py  langid_pygments.py  md_kql.py  qc.py  safety.py
src/repocapsule/sinks/: __init__.py  parquet.py  sinks.py
src/repocapsule/sources/: __init__.py  csv_source.py  evtxio.py  fs.py  github_zip.py  githubio.py  jsonl_source.py  local.py  parquetio.py  pdfio.py  sources_webpdf.py  sqlite_source.py
src/sievio/: __init__.py
src/sievio/cli/: main.py  runner.py
src/sievio/core/: AGENTS.md  builder.py  chunk.py  concurrency.py  config.py  convert.py  dataset_card.py  decode.py  dedup_store.py  factories.py  factories_context.py  factories_qc.py  factories_sinks.py  factories_sources.py  hooks.py  interfaces.py  language_id.py  licenses.py  log.py  naming.py  pipeline.py  plugins.py  qc_controller.py  qc_post.py  qc_utils.py  records.py  registries.py  registry_callables.py  runner.py  safe_http.py  sharding.py  stats_aggregate.py
src/sievio/core/extras/: langid_lingua.py  langid_pygments.py  md_kql.py  qc.py  safety.py
src/sievio/sinks/: AGENTS.md  parquet.py  sinks.py
src/sievio/sources/: AGENTS.md  csv_source.py  evtxio.py  fs.py  githubio.py  jsonl_source.py  parquetio.py  pdfio.py  sources_webpdf.py  sqlite_source.py
tests/: test_builder_runtime_layering.py  test_callable_registries.py  test_chunk.py  test_cli_main.py  test_concurrency.py  test_config_builder_pipeline.py  test_config_merge_helper.py  test_convert.py  test_convert_integration.py  test_dataset_card.py  test_dataset_card_qc.py  test_decode.py  test_decode_fallback.py  test_dedup_store.py  test_executor_modes.py  test_factories_sources_config_overlays.py  test_hooks.py  test_jsonl_source.py  test_language_customization.py  test_log_and_naming.py  test_pattern_source.py  test_pipeline_error_rate.py  test_pipeline_middlewares.py  test_pipeline_streaming.py  test_plugins_and_registries.py  test_post_qc_parallel.py  test_qc_controller.py  test_qc_defaults.py  test_qc_integration.py  test_qc_pipeline.py  test_qc_post.py  test_qc_safety_modes.py  test_qc_simhash_optimization.py  test_qc_utils.py  test_qc_utils_accel_parity.py  test_records.py  test_run_summary_footer.py  test_runner_finalizers.py  test_safe_http.py  test_schema_validation.py  (+7 more)
