[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "repocapsule"
dynamic = ["version"]
description = "Repository -> JSONL converter with robust decoding, structure-aware chunking, Markdown/KQL extraction, and GitHub helpers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
keywords = ["jsonl", "github", "markdown", "kql", "ingestion", "chunking"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# Core library has no hard runtime deps (stdlib-only)
dependencies = []

[project.optional-dependencies]
# Dev/test tooling
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.1"
]

# Optional tokenizer for accurate token counts
tok = ["tiktoken>=0.6"]

# Optional PDF ingestion support
pdf = ["pypdf>=4"]

# Quality scoring / model-based extras (heavy)
qc = [
  "torch>=2.2",
  "transformers>=4.44",
  "tiktoken>=0.6",
  "pyyaml>=6"
]

[project.urls]
Homepage = "https://github.com/your-org/repocapsule"
Repository = "https://github.com/your-org/repocapsule"
Issues = "https://github.com/your-org/repocapsule/issues"

[project.scripts]
repocapsule-qc = "repocapsule.qc:main"

[tool.setuptools]
# <-- src layout -->
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["repocapsule*"]

[tool.setuptools.dynamic]
version = {attr = "repocapsule.__version__"}

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
